--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,19 +22,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height"
         android:layout_gravity="top"
-        android:layout_width="match_parent"
+        android:background="?attr/colorPrimary"
         android:minHeight="@dimen/toolbar_height"
-        app:theme="@style/Theme.Hashmypass.Toolbar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:background="?attr/colorPrimary">
+        app:theme="@style/Theme.Hashmypass.Toolbar">
 
         <Spinner
             android:id="@+id/spinner_nav"
@@ -43,48 +43,49 @@
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/tag_list"
-            android:layout_gravity="bottom"
-            android:choiceMode="singleChoice"
-            android:alpha="0"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:alpha="0"
+            android:choiceMode="singleChoice"/>
 
         <LinearLayout
             android:id="@+id/list_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom"
-            android:alpha="0"
-            android:orientation="vertical"
-            android:gravity="top"
-            android:layout_marginTop="@dimen/list_empty_top_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_marginTop="@dimen/list_empty_top_vertical_margin"
+            android:alpha="0"
+            android:gravity="top"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_gravity="left"
-                android:text="@string/lets_start"
-                android:textSize="@dimen/text_large"
-                android:fontFamily="sans-serif-light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/lets_start"
+                android:textSize="@dimen/text_large"
                 tools:ignore="UnusedAttribute"/>
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="@dimen/list_empty_middle_vertical_margin"
-                android:text="@string/no_tags"
-                android:textSize="@dimen/text_large"
                 android:fontFamily="sans-serif-light"
                 android:lineSpacingMultiplier="1.5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:text="@string/no_tags"
+                android:textSize="@dimen/text_large"
+                tools:ignore="UnusedAttribute"/>
 
         </LinearLayout>
 
@@ -93,8 +94,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
             android:src="@drawable/ic_action_add"
-            app:fab_colorNormal="@color/color_palette_1"
-            android:layout_margin="16dp" />
+            app:fab_colorNormal="@color/color_palette_1"/>
     </FrameLayout>
 </RelativeLayout>
