--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -26,4 +26,5 @@
     <item name="settings_default_copy_to_clipboard" format="boolean"
           type="bool">false
     </item>
+    <item name="settings_default_tag_order" format="integer" type="integer">0</item>
 </resources>
