--- a/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
@@ -6,6 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:drawablePadding="8dp"
+    android:drawableRight="@drawable/spinner_triangle"
     android:fontFamily="sans-serif"
     android:paddingLeft="16dp"
     android:paddingRight="4dp"
