--- a/app/src/main/res/layout/material_color_palette_item.xml
+++ b/app/src/main/res/layout/material_color_palette_item.xml
@@ -23,7 +23,7 @@
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
-    <com.reddyetwo.hashmypass.app.views.MaterialColorPaletteButton
+    <com.reddyetwo.hashmypass.app.view.MaterialColorPaletteButton
         android:id="@+id/material_color_palette_button"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
