Initial implementation of new tutorial style

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,5 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+* Copyright 2014 Red Dye No. 2
+*
+* This file is part of Twik.
+*
+* Twik is free software: you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation, either version 3 of the License, or
+* (at your option) any later version.
+*
+* Twik is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with Twik.  If not, see <http://www.gnu.org/licenses/>.
+*
+-->
+
 <resources>
+
+    <style name="Theme.Hashmypass"
+           parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- colorPrimary is used for the default action bar background -->
+        <item name="colorPrimary">@color/hashmypass_main</item>
+
+        <!-- colorPrimaryDark is used for the status bar -->
+        <item name="colorPrimaryDark">@color/hashmypass_dark</item>
+
+        <!-- colorAccent is used as the default value for colorControlActivated,
+             which is used to tint widgets -->
+        <item name="colorAccent">@color/hashmypass_main</item>
+    </style>
+
+    <style name="Theme.Hashmypass.Tutorial" parent="Theme.Hashmypass">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
 
     <style name="Widget.Hashmypass.Toolbar.Spinner.Base" parent="Widget.AppCompat.Light.Spinner.DropDown.ActionBar">
         <item name="android:background">?android:selectableItemBackground</item>
