--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -99,5 +99,5 @@
     <!-- Color palette for tutorial -->
     <color name="color_tutorial_1">#43A047</color>
     <color name="color_tutorial_2">#00B8D4</color>
-    <color name="color_tutorial_3">#E65100</color>
+    <color name="color_tutorial_3">#FF9800</color>
 </resources>
