--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -21,6 +21,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -49,43 +50,45 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"/>
 
-            <TableLayout
-                android:id="@+id/button_bar"
+            <RelativeLayout
+                android:gravity="center|center_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:stretchColumns="1">
+                android:layout_height="wrap_content">
 
-                <TableRow>
-                    <Button
-                        android:id="@+id/skip_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="?android:buttonBarButtonStyle"
-                        android:textColor="@android:color/white"
-                        android:text="@string/skip"/>
+                <Button
+                    android:id="@+id/skip_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    style="?android:buttonBarButtonStyle"
+                    android:textColor="@android:color/white"
+                    android:text="@string/skip"
+                    tools:ignore="RtlHardcoded"/>
 
-                    <LinearLayout
-                        android:layout_gravity="center"
+                <LinearLayout
+                    android:gravity="center|center_vertical"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <com.reddyetwo.hashmypass.app.view.ViewPagerIndicator
+                        android:id="@+id/pager_indicator"
+                        app:radius="4dp"
+                        app:spacing="8dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <com.reddyetwo.hashmypass.app.view.ViewPagerIndicator
-                            android:id="@+id/pager_indicator"
-                            app:radius="4dp"
-                            app:spacing="8dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
 
-                    <Button
-                        android:id="@+id/next_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        style="?android:buttonBarButtonStyle"
-                        android:textColor="@android:color/white"
-                        android:text="@string/next"/>
-                </TableRow>
-            </TableLayout>
+                <Button
+                    android:id="@+id/next_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    style="?android:buttonBarButtonStyle"
+                    android:textColor="@android:color/white"
+                    android:text="@string/next"
+                    tools:ignore="RtlHardcoded"/>
+
+                </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
     <View
