--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -22,9 +22,9 @@
 
 <resources>
     <item name="settings_key_remember_master_key" format="string"
-          type="string">remember_master_key
+          type="string" translatable="false">remember_master_key
     </item>
     <item name="settings_key_copy_to_clipboard" format="string" type="string"
-        >copy_to_clipboard
+          translatable="false">copy_to_clipboard
     </item>
 </resources>
